LxForm: mobile view padding tokens; LxSiteMap: link wrapping fix (#1978)

--- a/src/styles/lx-buttons.css
+++ b/src/styles/lx-buttons.css
@@ -14,7 +14,8 @@
   margin: -0.1em -0.5em;
 }
 
-.lx-link-wrapper a {
+.lx-link-wrapper a,
+a.lx-sitemap-link {
   display: inline-block;
 }
 
